# tree-sitter-nesfab

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  log.html  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-nesfab.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_nesfab/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNesfab/: nesfab.h
examples/: function.fab  hello_world.fab  scroll.fab  test.fab  type.fab
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comment.txt  statements.txt
