[package]
name = "tree-sitter-nesfab"
description = "NESFab grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "nesfab"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/hnd2/tree-sitter-nesfab.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
